Adicionando os códigos de teste. Foi finalizada a secção de testes do curso da GeekUniversity. Usamos o model mommy (extensão python) para poder realizar os testes nos models da aplicação. O arquivo settings foi alterado para funcionar o e-mail durante o desenvolvimento. O arquivo 'teste' foi dletado por não fazer parte do projeto. O arquivo 'asgi.py' foi adicionado às exclusões do coverage.

--- a/fusion/.coveragerc
+++ b/fusion/.coveragerc
@@ -2,12 +2,13 @@
 source = .
 
 omit = 
-    */__init.py
+    */__init__.py
     */settings.py
     */manage.py
     */wsgi.py
     */apps.py
     */urls.py
     */admin.py
+    */asgi.py
     */migrations/*
     */tests/*
